--- a/KN_ProyectoClase/Views/Principal/Inicio.cshtml
+++ b/KN_ProyectoClase/Views/Principal/Inicio.cshtml
@@ -4,14 +4,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
+@if (ViewBag.Mensaje != null)
+{
+    <div class="alert alert-warning msjCentrado">
+        @ViewBag.Mensaje
+    </div>
+}
 
-    @if (ViewBag.Mensaje != null)
-    {
-        <div class="alert alert-warning msjCentrado">
-            @ViewBag.Mensaje
-        </div>
-    }
+<div class="row">
 
     @foreach (var item in Model)
     {
@@ -32,8 +32,13 @@
                     @if (Session["IdPerfilUsuario"] != null)
                     {
                         <div class="text-center">
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                                Ver más
+                            <button type="button" class="btn btn-primary abrirModal" data-toggle="modal" data-target="#exampleModal"
+                                    data-nombre="@item.Nombre"
+                                    data-id="@item.Id"
+                                    data-desc="@item.Descripcion"
+                                    data-salario="@item.Salario"
+                                    data-horario="@item.Horario">
+                                Ver Detalle
                             </button>
                         </div>
                     }
@@ -46,22 +51,48 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="exampleModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel"><label id="lblNombre"></label></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                ...
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+
+            @using (Html.BeginForm("AplicarOferta", "Principal"))
+            {
+                <div class="modal-body">
+
+                    @Html.Hidden("Id", "")
+
+                    <textarea id="lblDescripcion" class="form-control" rows="10" style="resize:none; background-color:transparent;" readonly="readonly"></textarea>
+
+                    <br />
+                    El salario es: <label id="lblSalario"></label><br />
+                    El horario es: <label id="lblHorario"></label><br />
+
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="btn btn-primary" value="APLICAR" />
+                </div>
+            }
+
         </div>
     </div>
 </div>
+
+<script src="~/Template/js/jquery.min.js"></script>
+<script>
+
+    $(document).on("click", ".abrirModal", function () {
+
+        $("#lblNombre").text($(this).attr("data-nombre"));
+        $("#Id").val($(this).attr("data-id"));
+        $("#lblDescripcion").text($(this).attr("data-desc"));
+        $("#lblHorario").text($(this).attr("data-horario"));
+        $("#lblSalario").text($(this).attr("data-salario"));
+    });
+
+</script>
