--- a/KN_ProyectoClase/Views/Principal/Estadisticas.cshtml
+++ b/KN_ProyectoClase/Views/Principal/Estadisticas.cshtml
@@ -35,34 +35,43 @@
     }
 </div>
 
-<div class="row">
+<!--<div class="row">
 
     <div class="col-xl-4 col-lg-5">
-        <div class="card shadow mb-4">
+        <div class="card shadow mb-4">-->
             <!-- Card Header - Dropdown -->
-            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
-            </div>
+            <!--<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">Gráfico 1</h6>
+            </div>-->
 
             <!-- Card Body -->
-            <div class="card-body">
+            <!--<div class="card-body">
                 <div class="chart-pie pt-4 pb-2">
                     <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
                     <canvas id="myPieChart" width="533" height="245" style="display: block; width: 533px; height: 245px;" class="chartjs-render-monitor"></canvas>
-                </div>
-                <div class="mt-4 text-center small">
-                    <span class="mr-2">
-                        <i class="fas fa-circle text-primary"></i> Direct
-                    </span>
-                    <span class="mr-2">
-                        <i class="fas fa-circle text-success"></i> Social
-                    </span>
-                    <span class="mr-2">
-                        <i class="fas fa-circle text-info"></i> Referral
-                    </span>
                 </div>
             </div>
         </div>
     </div>
 
+</div>-->
+
+<div class="row">
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+        </div>
+        <div class="card-body">
+            <div class="chart-bar">
+                <div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class=""></div></div></div>
+                <canvas id="myBarChart" width="533" height="320" style="display: block; width: 533px; height: 320px;" class="chartjs-render-monitor"></canvas>
+            </div>
+        </div>
+    </div>
+
 </div>
+
+<script src="~/Template/js/jquery.min.js"></script>
+<script src="~/Template/js/Chart.min.js"></script>
+@*<script src="~/Template/js/chart-pie-demo.js"></script>*@
+<script src="~/Template/js/chart-bar-demo.js"></script>
